--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "mongoose": "^5.2.6",
-    "morgan": "~1.9.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "shortid": "^2.2.12"
   }
 }
